@startuml

title __NEWS's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.news {
        class Article {
            - author : String
            - title : String
            - description : String
            - content : String
            - publishedAt : LocalDateTime
            - url : String
            - urlToImage : String
            - summary : String
            - image : Image
            + Article()
            + toString()
            + loadImage()
            + getTitle()
            + getDescription()
            + getContent()
            + getAuthor()
            + getUrl()
            + setUrl()
            + getUrlToImage()
            + getPublishedAt()
            + getSource()
            + getSummary()
            + getImage()
            + getArticleFeed()
            + setArticleFeed()
            + sentimentString()
            + getSentimentHeading()
            + getDateTime()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.news {
        class ArticleSource {
            - id : String
            - name : String
            + ArticleSource()
            + getId()
            + getName()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.news {
        class NewsClient {
            - apiVersion : String
            + NewsClient()
            - getBaseRequest()
            - makeRequest()
            + getTopHeadlines()
            + getEverything()
            + getSources()
            - bodyToArticles()
            + getArticles()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.news {
        interface NewsInterface {
            {abstract} + getArticles()
        }
      }
    }
  }
  

  Article -up-|> SentimentAnalyzable
  Article o-- ArticleSource : source
  Article o-- ArticleFeed : articleFeed
  NewsClient -up-|> NewsInterface
  NewsClient -up-|> AbstractClient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
